В чате стало понятно от кого приходит сообщение, теперь они по разным частям экрана

--- a/online-chat/src/components/CenterSideBar/CenterSideBar.css
+++ b/online-chat/src/components/CenterSideBar/CenterSideBar.css
@@ -97,6 +97,11 @@
   position: relative;
 }
 
+.message_right{
+  margin-left: auto;
+  margin-right: 30px;
+}
+
 .message__text{
   word-break:break-all;
   margin: 0;
