--- a/online-chat/src/components/LeftSideBar/LeftSideBarStyles.css
+++ b/online-chat/src/components/LeftSideBar/LeftSideBarStyles.css
@@ -84,6 +84,10 @@
   background-color: #ffffff5a;
 }
 
+.notification{
+  background-color: rebeccapurple;
+}
+
 .Search__result-container{
   position: absolute;
   list-style: none;
