--- a/online-chat/src/components/CenterSideBar/CenterSideBar.css
+++ b/online-chat/src/components/CenterSideBar/CenterSideBar.css
@@ -1,4 +1,12 @@
 .CenterSideBar__container{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.Chat__container{
     display: flex;
     flex: 1;
     flex-direction: column;
