--- a/online-chat/src/components/LeftSideBar/LeftSideBarStyles.css
+++ b/online-chat/src/components/LeftSideBar/LeftSideBarStyles.css
@@ -1,22 +1,22 @@
 .LeftSideBar__container{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    outline: 1px solid  black;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  outline: 1px solid  black;
 }
 
 .Chats__container{
-    display: flex;
-    flex: 1;
-    background-color: #e9e8eb;
-     outline: 1px solid #d4d2d2;
+  display: flex;
+  flex: 1;
+  background-color: #e9e8eb;
+  outline: 1px solid #d4d2d2;
 }
 
 .EmojiSidebar{
-    width: 280px;
-    height: 100%;
-    background-color: #e9e8eb; /* твой цвет */
-    display: flex;
+  width: 280px;
+  height: 100%;
+  background-color: #e9e8eb; /* твой цвет */
+  display: flex;
 }
 
 .Chats__list{
@@ -149,6 +149,7 @@
 
   .LeftSideBar__container {
     width: 100%;
+    height: 100%;
   }
 
   /* Общий горизонтальный отступ для поиска и списка */
@@ -156,6 +157,11 @@
   .Chats__list {
     padding: 0 8px;
     box-sizing: border-box;
+  }
+
+  .Chats__list{
+    height: auto;
+    flex: 1;
   }
 
   .Search {
