--- a/online-chat/src/index.css
+++ b/online-chat/src/index.css
@@ -1,3 +1,14 @@
+html, body {
+  height: 100%;
+}
+
+#root{
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+
 html {
   box-sizing: border-box;
 }
@@ -21,14 +32,14 @@ ul{
 .app-desktop-layout,
 .app-mobile-layout {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
 }
 
 .app-mobile-layout {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   max-height: 100dvh;
   overflow: hidden;
 }
