--- a/online-chat/src/index.css
+++ b/online-chat/src/index.css
@@ -1,4 +1,6 @@
 html, body {
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
@@ -74,8 +76,8 @@ ul{
   }
 
   .app-mobile-layout {
-    position: relative;
-    width: 100%;
+    height: 100dvh;
+    max-height: 100dvh;
     overflow: hidden;
   }
 
