--- a/online-chat/src/components/CenterSideBar/CenterSideBar.css
+++ b/online-chat/src/components/CenterSideBar/CenterSideBar.css
@@ -522,7 +522,7 @@
     overflow: hidden;
 
     /* критично: фон НЕ fixed на iOS */
-    background-attachment: scroll;
+    background-attachment: scroll !important;
   }
 
   .ChatBody_container {
